--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <title>Vite + React</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="component1"></div>
+    <div id="component2"></div>
+    <div id="component3"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
