--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <div id="component1"></div>
     <div id="component2"></div>
     <div id="component3"></div>
+    <div id="fragment"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
