--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <div id="component2"></div>
     <div id="component3"></div>
     <div id="fragment"></div>
+    <div id="props"></div>
+    <div id="counter"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
